# accesibilidad-urbana

./: .gitignore  README.md  Red_híbrida_actual.ipynb  accesibilidad-urbana.code-workspace  pyproject.toml  setup.py
aup/: __init__.py  analysis.py  data.py  env  graph.py  raster.py  settings.py  utils.py  visualization.py
notebooks/: 06-H3-polygon-test.ipynb  06-LN-density.ipynb  07-Population-nodes-test.ipynb  08-Download-from-polygon.ipynb  09-Nearest-node-test.ipynb  1.0-LN-Data-exploration.ipynb  10-Distance-from-amenities.ipynb  10-LN-Plots.ipynb  11-Fill-missing-omnx-data.ipynb  13-Accessibility-Index.ipynb  13-LN-Kepler.ipynb  14-Comparing-accessibility-index.ipynb  15-Accessibility-index-graphs.ipynb  15-LN-Guggenheim.ipynb  16a-Hex-to-centrality.ipynb  16b-Hex-to-centrality.ipynb  17-Elevation_Methods_test.ipynb  18-Elevation-Auto.ipynb  19-Speed-to-hexagons.ipynb  2-LN-Hexbins.ipynb  2.1-LN-Hexbins-FarmaciasMX.ipynb  2.2-LN-Poblacion.ipynb  22-Museo-Ciencias-Ambientales.ipynb  23-Group-block-hex.ipynb  23b-Group-block-hex.ipynb  24-2010-Network.ipynb  26c-MCA-Rutas-Lomas.ipynb  27-TMP-AreaPob.ipynb  28-Hex-Pop-2010-2020.ipynb  29-Ciclovia-to-points.ipynb  29-Population-correlation.ipynb  3-LN-Kepler.ipynb  30-Pop-block-to-hex-test.ipynb  30-SIGADE.ipynb  30.1-sigade_find_errors.ipynb  30.2 sigade_fix_errors.ipynb  31-AMG-pop-loss.ipynb  4-LN-Insights.ipynb  5-IndexByCity.ipynb  5-LN-geoJSONtoCSV.ipynb  (+6 more)
scripts/: .osmnx_d2736fefa6a712167ed9234da6e544b337471928.vrt  01-denue_to_nodes.py  01-population_to_nodes.py  02-1-optimized-bigcity-distance-amenities.py  (+64 more)
(+768 files in other folders)
