[tool.poetry]
name = "aup"
version = "0.1.0"
description = ""
authors = ["edgaregurrola <edgaregurrola@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
odc = "^0.1.0"
jupyterlab = "^4.2.5"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
